--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "chart.js": "^3.6.2",
     "js-cookie": "^3.0.1",
+    "marked": "^4.1.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
